# aqi

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
homebrew/: aqi.rb
src/: main.rs
