[package]
name = "aqi"
version = "0.1.0"
authors = ["Brian McCallister <brianm@skife.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
human-panic = "1"
env_logger = "0.7"
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
structopt = "0.3"